examples/bad/06-runtime_error_no_match.ez
;* Match examples in files 08-10 and 15
noMatchHead : [a] -> a;
noMatchHead lst = match lst with {h::t -> h;};

main : Integer ;
main = noMatchHead [];
